unpackaged/objects/DebugLog__c.object
<CustomObject>
  <description>Object with debug log records. Used by ApexClass DebugLog to extend the default system debug standard features of Salesforce.</description>
  <fields>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>DateTime__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>DebugUrl__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_460, FIND( "&amp;apos;/services&amp;apos;", $Api.Partner_Server_URL_460)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debug URL</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ErrorType__c</fullName>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LineNumber__c</fullName>
    <label>Line Number</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>ObjectId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Object ID related with the error.</inlineHelpText>
    <label>Object ID</label>
    <length>18</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Info</fullName>
          <color>#33FFFF</color>
          <label>Info</label>
        </value>
        <value>
          <fullName>Error</fullName>
          <color>#FF9966</color>
          <label>Error</label>
        </value>
        <value>
          <fullName>Fatal</fullName>
          <color>#CC6600</color>
          <label>Fatal</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>StackTraceString__c</fullName>
    <label>Stack Trace String</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Open</fullName>
        </value>
        <value>
          <fullName>Redondant</fullName>
        </value>
        <value>
          <fullName>In Progress</fullName>
        </value>
        <value>
          <fullName>Closed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TypeName__c</fullName>
    <label>Type Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <label>Debug Log</label>
  <nameField>
    <displayFormat>Log # {0000}</displayFormat>
    <label>Debug Log Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Debug Logs</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>